Fix: Small alignment issue on home page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,4 @@
 #home-content {
-  position: absolute;
-  top: 0;
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
-  margin: 0;
   background-image: url("../../assets/home-background.png");
   background-size: cover;
-  padding-left: auto;
-  padding-right: auto;
 }
